# muse

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker.sh
src/: event.rs  format.rs  lib.rs  logger.rs  main.rs  types.rs
src/commands/: leave.rs  mod.rs  now_playing.rs  play.rs  queue.rs  register.rs  remove.rs  skip.rs
