[package]
name = "muse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
poise = "0.5"
songbird = { version = "0.3", features = ["builtin-queue", "yt-dlp"] }
tokio = { version = "1.24", features = ["full"] }
